--- a/Frontend/youtube/src/Component/Comp.module.css
+++ b/Frontend/youtube/src/Component/Comp.module.css
@@ -164,3 +164,47 @@
     width:100%;
     height:60%;
 }
+
+.iframe{
+    margin: 20px;
+    margin-left: 5%;
+}
+
+.videoAdjust{
+    display: flex;
+    border: 1px solid red;
+    justify-content: space-around;
+}
+.box3{
+    /* border: 1px solid red; */
+    height:94px;
+    width:400px;
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+}
+.box3>img{
+    height:100%;
+    width:45%;
+}
+.box3>div>div>div{
+    /* border: 1px solid green; */
+    height:94px;
+    line-height: 14px;
+}
+.box3>div>div>img{
+display: none;
+}
+.box3>div>div>div>p{
+    font-size: 12px ;
+}
+
+.subs{
+    background-color: #d32a00;
+    border-radius: 2px;
+    border: none;
+    height: 50px;
+    width:150px;
+    font-size: 18px;
+    cursor: pointer;
+}
